--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Luis J Camargo",
   "license": "ISC",
   "dependencies": {
+    "commander": "^5.1.0",
     "csv-parse": "^4.8.8",
     "fast-csv": "^4.1.3",
     "midi-writer-js": "^1.7.2",
